--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/seokwangwoo/youtube_clone#readme",
   "dependencies": {
     "express": "^4.19.2",
+    "mongoose": "^8.5.3",
     "morgan": "^1.10.0",
     "pug": "^3.0.3"
   },
@@ -25,6 +26,13 @@
     "@babel/core": "^7.25.2",
     "@babel/node": "^7.25.0",
     "@babel/preset-env": "^7.25.3",
-    "nodemon": "^3.1.4"
+    "@prettier/plugin-pug": "^3.0.0",
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.3"
+  },
+  "prettier": {
+    "plugins": [
+      "@prettier/plugin-pug"
+    ]
   }
 }
