--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/seokwangwoo/youtube_clone#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.5.3",
     "morgan": "^1.10.0",
     "pug": "^3.0.3"
@@ -28,7 +30,9 @@
     "@babel/node": "^7.25.0",
     "@babel/preset-env": "^7.25.3",
     "@prettier/plugin-pug": "^3.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/morgan": "^1.9.9",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
