--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "url": "git+https://github.com/seokwangwoo/youtube_clone.git"
   },
   "scripts": {
-    "dev": "nodemon --exec ts-node src/init.ts",
-    "build": "tsc"
+    "dev:server": "nodemon",
+    "build": "tsc",
+    "dev:assets": "webpack"
   },
   "author": "Seo Kwangwoo",
   "license": "MIT",
@@ -29,19 +30,25 @@
     "pug": "^3.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/node": "^7.25.0",
-    "@babel/preset-env": "^7.25.3",
     "@prettier/plugin-pug": "^3.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
+    "@types/webpack": "^5.28.5",
+    "css-loader": "^7.1.2",
+    "mini-css-extract-plugin": "^2.9.1",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.1",
+    "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   },
   "prettier": {
     "plugins": [
